--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ repository               : "jafarhussen100/jafarhussen100.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Jafar Hussen"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "testingtesting"
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
