--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Jafar Hussen"
   pronouns         : # example: "she/her"  
   bio              : "testingtesting"
-  location         : "Earth"
+  location         : "Maryland"
   employer         : "University of Maryland Baltimore County"
   uri              : # URL
   email            : "jafar.ahussen@gmail.com" 
