--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Jafar Hussen"
   pronouns         : # example: "she/her"  
-  bio              : ""My goal in life is to achieve true freedom for myself and passing that on to the world.""
+  bio              : "My goal in life is to achieve true freedom for myself and passing that on to the world around me"
   location         : "Maryland"
   employer         : "University of Maryland Baltimore County"
   uri              : # URL
